cmake_minimum_required(VERSION 3.14)
project(COS214_GP)

set(CMAKE_CXX_STANDARD 14)

include_directories(include)
include_directories(include/CommunicationSystem)
include_directories(include/Critters)
include_directories(include/Fleet)
include_directories(include/ManningTheSpaceships)
include_directories(include/Planets)
include_directories(include/SpaceShips)

add_executable(COS214_GP
        include/CommunicationSystem/Radio.h
        include/Critters/Critter.h
        include/Critters/critterGrunt.h
        include/Fleet/Fleet.h
        include/ManningTheSpaceships/Captain.h
        include/ManningTheSpaceships/chiefEngineer.h
        include/ManningTheSpaceships/combatCrew.h
        include/ManningTheSpaceships/combatCrewFactory.h
        include/ManningTheSpaceships/Commander.h
        include/ManningTheSpaceships/Crew.h
        include/ManningTheSpaceships/crewFactory.h
        include/ManningTheSpaceships/Doctor.h
        include/ManningTheSpaceships/Engineer.h
        include/ManningTheSpaceships/Human.h
        include/ManningTheSpaceships/Navigator.h
        include/ManningTheSpaceships/regularCrew.h
        include/ManningTheSpaceships/regularCrewFactory.h
        include/ManningTheSpaceships/Soldier.h
        include/Planets/homePlanet.h
        include/Planets/Map.h
        include/Planets/Planet.h
        include/Planets/Route.h
        include/SpaceShips/Battleship.h
        include/SpaceShips/BattleshipBlueprint.h
        include/SpaceShips/BoringBridge.h
        include/SpaceShips/BoringSickBay.h
        include/SpaceShips/BoringSleepQuarters.h
        include/SpaceShips/decorator.h
        include/SpaceShips/Exploration_vessel.h
        include/SpaceShips/Exploration_vesselBlueprint.h
        include/SpaceShips/FancyBridge.h
        include/SpaceShips/FancySickbay.h
        include/SpaceShips/FancySleepQuarters.h
        include/SpaceShips/Fighter.h
        include/SpaceShips/FighterBlueprint.h
        include/SpaceShips/Frigate.h
        include/SpaceShips/FrigateBlueprint.h
        include/SpaceShips/SpaceshipBlueprints.h
        include/SpaceShips/Spaceships.h
        include/SpaceShips/SpaceStation.h
        include/SpaceShips/Transporter.h
        include/SpaceShips/TransporterBlueprint.h
        src/CommunicationSystem/Radio.cpp
        src/Critters/Critter.cpp
        src/Critters/critterGrunt.cpp
        src/Fleet/Fleet.cpp
        src/main/DanieTestMain.cpp
        src/ManningTheSpaceships/Captain.cpp
        src/ManningTheSpaceships/chiefEngineer.cpp
        src/ManningTheSpaceships/combatCrew.cpp
        src/ManningTheSpaceships/combatCrewFactory.cpp
        src/ManningTheSpaceships/Commander.cpp
        src/ManningTheSpaceships/Crew.cpp
        src/ManningTheSpaceships/crewFactory.cpp
        src/ManningTheSpaceships/Doctor.cpp
        src/ManningTheSpaceships/Engineer.cpp
        src/ManningTheSpaceships/Human.cpp
        src/ManningTheSpaceships/Navigator.cpp
        src/ManningTheSpaceships/regularCrew.cpp
        src/ManningTheSpaceships/regularCrewFactory.cpp
        src/ManningTheSpaceships/Soldier.cpp
        src/Planets/homePlanet.cpp
        src/Planets/Map.cpp
        src/Planets/Planet.cpp
        src/Planets/Route.cpp
        src/SpaceShips/Battleship.cpp
        src/SpaceShips/BattleshipBlueprint.cpp
        src/SpaceShips/BoringBridge.cpp
        src/SpaceShips/BoringSickBay.cpp
        src/SpaceShips/BoringSleepQuarters.cpp
        src/SpaceShips/decorator.cpp
        src/SpaceShips/Exploration_vessel.cpp
        src/SpaceShips/Exploration_vesselBlueprint.cpp
        src/SpaceShips/FancyBridge.cpp
        src/SpaceShips/FancySickbay.cpp
        src/SpaceShips/FancySleepQuarters.cpp
        src/SpaceShips/Fighter.cpp
        src/SpaceShips/FighterBlueprint.cpp
        src/SpaceShips/Frigate.cpp
        src/SpaceShips/FrigateBlueprint.cpp
        src/SpaceShips/SpaceshipBlueprints.cpp
        src/SpaceShips/Spaceships.cpp
        src/SpaceShips/SpaceStation.cpp
        src/SpaceShips/Transporter.cpp
        src/SpaceShips/TransporterBlueprint.cpp)
